[pep8]
ignore=E501
exclude=*.egg

[flake8]
max-line-length = 160

[REPORTS]
output-format=text
reports=no
msg-template={path}:{line}: [{msg_id}({symbol}), {obj}] {msg}

[pytest]
addopts = -v --tb=native --doctest-glob='*.md' --cov=pytest_ansible


[metadata]
name = pytest_ansible
version = 2.0.0
summary = Plugin for py.test to manipulate ansible capabilities
description-file =
    README.md
author = Avi Tal
author-email = avi3tal@gmail.com
classifier =
    Private :: Do Not Upload

[pbr]
warnerrors = True

[files]
packages =
    pytest_ansible

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
pytest11 =
    pytest-ansible = pytest_ansible.plugin

#[build_sphinx]
#    all_files = 1
#    build-dir = doc/build
#    source-dir = doc/source

#[wheel]
#    universal = 1
